Agregar script de instalación de JavaFX y actualizar documentación